fix: change slideshow overflow property to visible for improved image display

--- a/assets/css/modules/slideshow.css
+++ b/assets/css/modules/slideshow.css
@@ -106,7 +106,7 @@
     height: 100%;
     display: grid;
     place-items: center;
-    overflow: hidden;
+    overflow: visible;
 }
 
 /* 
